<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UROP Demo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="camera_button">Record video</string>
    <string name="title_activity_videocamera">VideocameraActivity</string>
    <string name="hello">Hello</string>
    <string name="title_activity_access_gyroscope">AccessGyroscope</string>
    <string name="playback_button">Play video</string>
    <string name="x_label">Orientation X (Roll): </string>
    <string name="y_label">Orientation Y (Pitch): </string>
    <string name="z_label">Orientation Z (Yaw): </string>
    <string name="blank"></string>
    <string name="title_activity_playback">PlaybackActivity</string>
    <string name="title">Recording Video and Sensor Data</string>

</resources>
