<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="horizontal" >

    <VideoView
        android:id="@+id/videoview"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="3" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center" >

            <Button
                android:id="@+id/playbackButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="PLAY"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/x_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/x_label" />

            <TextView
                android:id="@+id/x_value"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/blank"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/y_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/y_label" />

            <TextView
                android:id="@+id/y_value"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/blank"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/z_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/z_label" />

            <TextView
                android:id="@+id/z_value"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/blank"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>